--- a/app/templates/skeleton/bower.json
+++ b/app/templates/skeleton/bower.json
@@ -9,7 +9,7 @@
   ],
   "dependencies": {
     "jquery": "~2.2",
-    "lodash": "~4.9",
+    "underscore": "~1.8",
     "bootstrap": "~3.3",
     "angular": "~1.5",
     <% if(uirouter) { print('"angular-ui-router": "~0.2",'); } else { print('"angular-route": "~1.5",'); } %>
@@ -17,9 +17,10 @@
     "angular-resource": "~1.5",
     "angular-cookies": "~1.5",
     "angular-mocks": "~1.5",
-    "angular-bootstrap": "~1.3.1",
-    "moment": "~2.12",
-    "less.js": "~2.6",
-    "font-awesome": "~4.5"
+    "angular-ui-utils": "~3.0",
+    "angular-bootstrap": "~1.3",
+    "moment": "~2.13",
+    "less.js": "~1.6",
+    "font-awesome": "~4.6"
   }
 }
